# code-blink

./: LICENSE  README.md  pyproject.toml
src/code_blink/: __main__.py  main.py
src/code_blink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/code_blink/agent/: loop.py
src/code_blink/config/: config.py  defaults.py  schema.py
src/code_blink/provider/: base.py  lmstudio.py  ollama.py  openrouter.py  registry.py
src/code_blink/session/: store.py
src/code_blink/tools/: __init__.py  file_ops.py  permission.py  registry.py  shell.py  web_search.py
src/code_blink/tui/: app.py  app.tcss  chat_screen.py
src/code_blink/tui/widgets/: diff_block.py  streaming_text.py
