[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-blink"
version = "0.1.0"
description = "A local-first, open-source AI coding agent with Ollama/LMStudio"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Sato Imasu"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "textual>=0.47",
    "httpx>=0.27",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "rich>=13.0",
    "ddgs>=9.0",
]

[project.scripts]
code-blink = "code_blink.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
